# owyn-voice-api

./: .gitattributes  .gitignore  README.md  pyproject.toml
owyn-voice-api/: __init__.py  bark_voice_model.py  elevenlabs_voice_model.py  openvoice_voice_model.py  voice_model.py
owyn-voice-api/assets/prompts/: owyntest2.npz  owyntest3.npz  owyntest4.npz  owyntest5.npz
